finish new block textures system, and some cleanup